<resources>
    <string name="app_name" translatable="false">Adeon</string>
    <string name="my_devices_title">My devices</string>
    <string name="help_and_feedback_title">Help and feedback</string>
    <string name="support_title">Support</string>
    <string name="navigation_drawer_header_content_description"
            translation_description="Content description for the image that is shown at the top of the navigation drawer.">
        Navigation drawer header logo
    </string>
    <string name="empty_device_list">Please add a device.</string>
    <string name="device_name_hint">Device name</string>
    <string name="location_hint">Location</string>
    <string name="phone_hint">Device phone number</string>
    <string name="invalid_phone_number">Please enter a valid phone number.</string>
    <string name="invalid_device_name">Device name should not be empty!</string>
    <string name="command_value_out_of_range">Not in range 0–65535!</string>
    <string name="invalid_defined_commands">Some of the defined commands are invalid!</string>
    <string name="no_defined_command_error">No command was defined!</string>
    <string name="command_text_empty">Command text is empty!</string>
    <string name="add_device_title">Add device</string>
    <string name="add_device_button" translatable="false">@string/add_device_title</string>
    <string name="edit_device_title">Edit device</string>
    <string name="save_changes_button">Save changes</string>
    <string name="save_button">Save</string>
    <string name="action_edit_device" translatable="false">@string/edit_device_title</string>
    <string name="action_duplicate">Duplicate</string>
    <string name="action_remove_device">Remove device</string>
    <string name="commands">Defined commands</string>
    <string name="send_command_title">Send command</string>
    <string name="send_sms_button" translatable="false">@string/send_command_title</string>
    <string name="command_name">Name</string>
    <string name="command_value">Value</string>
    <string name="command_description">Command description</string>
    <string name="command_no_description">Unnamed command</string>
    <string name="command_text">Command text</string>
    <string name="sms_permissions_not_granted">SMS was not sent. Permissions were not granted.</string>
    <string name="content_desc_application_logo">Application logo</string>
    <string name="content_desc_device_image">Device image</string>
    <string name="content_desc_device_item_menu">Device item menu</string>
    <string name="no_command_selected">Please select at least one command before sending an SMS.</string>
    <string name="command_type">Command type</string>
    <string name="parametric_type">Parametric</string>
    <string name="plain_text_type">Plain text</string>
    <string name="checkbox_info">Please check all the commands that you would like to send.</string>
    <string name="checkbox_tap_info">Please tap on a command that you would like to send.</string>
    <string name="change_device_image">Change device image</string>
    <string name="select_from_adeon_library">Select from Adeon library</string>
    <string name="select_image">Select image</string>
    <string name="take_photo">Take photo</string>
    <string name="import_configuration_short">Import</string>
    <string name="import_configuration">Import configuration</string>
    <string name="export_configuration_short">Export</string>
    <string name="export_configuration">Export configuration</string>
    <string name="wipe_configuration_short">Wipe</string>
    <string name="warning">Warning</string>
    <string name="import_overwrite_msg">Existing configuration will be overwritten! Do you want to continue?</string>
    <string name="import_btn_label">Import</string>
    <string name="wipe_btn_label" translatable="false">@string/wipe_configuration_short</string>
    <string name="wipe_msg">All your device profiles will be erased and cannot be recovered! Do you want to continue?</string>
    <string name="configuration_wiped">Configuration has been wiped.</string>
    <string name="nothing_to_export">There is nothing to export! Please add some devices first.</string>
    <string name="nothing_to_wipe">Your configuration is already empty!</string>
    <string name="content_desc_delete">Delete icon</string>
    <string name="delete">Delete</string>
    <string name="undo">Undo</string>
    <string name="device_removed">Device %s removed from the list!</string>
    <string name="command_removed">Command %s removed from the list!</string>
    <string name="favorite_articles">Favorite articles</string>
    <string name="add_new_device_article">Add a new device</string>
    <string name="delete_a_device_article">Delete device</string>
    <string name="export_configuration_article">Export configuration</string>
    <string name="import_configuration_article">Import configuration</string>
    <string name="send_commands_article">Sending commands</string>
    <string name="browse_all_articles">Browse all articles</string>
    <string name="send_feedback">Send feedback</string>
    <string name="invalid_configuration">Invalid file, import was not successful!</string>
    <string name="configuration_import_successful">Configuration imported successfully.</string>
    <string name="configuration_export_error">An error occurred during configuration export!</string>
    <string name="configuration_export_successful">Configuration export was successful.</string>
    <string name="premium_sms">You may be charged for sending a message to the SMS number you entered.</string>
    <string name="help_menu_action_about">Version information</string>
    <string name="help_menu_action_licenses">Open source licenses</string>
    <string name="first_bullet_point_id" translatable="false">1.</string>
    <string name="second_bullet_point_id" translatable="false">2.</string>
    <string name="third_bullet_point_id" translatable="false">3.</string>
    <string name="fourth_bullet_point_id" translatable="false">4.</string>
    <string name="fifth_bullet_point_id" translatable="false">5.</string>
    <string name="sixth_bullet_point_id" translatable="false">6.</string>
    <string name="seventh_bullet_point_id" translatable="false">7.</string>
    <string name="eight_bullet_point_id" translatable="false">8.</string>
    <string name="ninth_bullet_point_id" translatable="false">9.</string>
    <string name="tenth_bullet_point_id" translatable="false">10.</string>
    <string name="unordered_bullet_point" translatable="false">\u2022</string>
    <string name="article_01_bullet_01_text">Tap on the [FAB] button.</string>
    <string name="article_01_bullet_02_text">Insert device name.</string>
    <string name="article_01_bullet_03_text">(optional) Set device image by tapping on the [CAMERA] button.</string>
    <string name="article_01_bullet_04_text">(optional) Insert device location.</string>
    <string name="article_01_bullet_05_text">Insert device phone number.</string>
    <string name="article_01_bullet_06_text">Choose command type. Text type is suitable for commercial GSM devices, while parametric type is suitable for developers. For more information the %s.</string>
    <string name="article_01_bullet_06_text_docs">Documentation</string>
    <string name="article_01_bullet_07_text">Insert command description (plain text type command) or parameter name (parametric type command).
    </string>
    <string name="article_01_bullet_08_text">Insert command text (plain text type command) or value (parametric type command).
    </string>
    <string name="article_01_bullet_09_text">(optional) Add another command by tapping on the [FAB] button.</string>
    <string name="article_01_bullet_10_text">Tap on the %s button.</string>
    <string name="article_01_note_text">Note: You can use the %s option in the device context menu [MORE_OPTIONS] to add two or more similar devices.
    </string>
    <string name="article_02_bullet_01_text">Tap on the [MORE_OPTIONS] button and then tap on %s.</string>
    <string name="article_02_note_text">Note: You can undo device deletion within next 5 seconds by tapping on the %s button in the bottom pop-up bar.
    </string>
    <string name="article_03_bullet_01_text">Tap on the [MORE_OPTIONS] button in the top bar menu.</string>
    <string name="article_03_bullet_02_text">Select %s.</string>
    <string name="article_03_bullet_03_text">Choose destination folder.</string>
    <string name="article_03_bullet_04_text">Edit config file name.</string>
    <string name="article_03_bullet_05_text">Tap on the %s button.</string>
    <string name="article_03_note_text">Note: Device images are not exported.</string>
    <string name="article_04_bullet_03_text">If you already have some devices added, please confirm that you want to
        continue with import. Current settings will be lost.
    </string>
    <string name="article_04_bullet_04_text">Choose exported configuration file (file type .txt).</string>
    <string name="article_04_note_text">Note:</string>
    <string name="article_04_note_01_text">Import will override current app database.</string>
    <string name="article_04_note_02_text">Device images are not imported. Add device images manually after every import.</string>
    <string name="article_05_bullet_01_text">Select a device by tapping on the specific item in the device list. A page with a list of defined commands will show up.</string>
    <string name="article_05_bullet_02_text">If you want to send a text command, inside a list, tap on a [SEND_COMMAND] button under this command.</string>
    <string name="article_05_bullet_03_text">Otherwise, use checkbox [CHECKBOX] to choose parametric command (or commands), which will be sent
        into device over the cellular network (see the %s for more information).
    </string>
    <string name="article_05_bullet_04_text">Tap on the %s button.</string>
    <string name="app_vendor" translatable="false">©2019 JSC electronics s.r.o.</string>
    <string name="app_version">Version %s</string>
    <string name="intro_page1_title">Welcome!</string>
    <string name="intro_page1_description">Manage your GSM devices easily.</string>
    <string name="intro_page2_title">Go offline!</string>
    <string name="intro_page2_description">Control your device using a predefined SMS.</string>
    <string name="intro_page3_title">One app to rule them all!</string>
    <string name="intro_page3_description">Simple management on one screen. For an unlimited number of devices.</string>
    <string name="intro_page4_title">One device, many options.</string>
    <string name="intro_page4_description">Multiple-command support. Send one or more commands at a time.</string>
    <string name="intro_page5_title">For developers.</string>
    <string name="intro_page5_description">Add support into your embedded device with our open-source library.</string>
    <string name="sim_icon_content_description">SIM icon</string>
    <string name="location_icon">Location icon</string>
    <string name="configuration">Configuration</string>
    <string name="invalid_command_value">Invalid command value!</string>
    <string name="remove_ads">Remove advertisements</string>
    <string name="purchases">Purchases</string>
    <string name="purchases_unavailable">Purchases are not available in your country.</string>
    <string name="whatsnew_title">Version 1.2.0 brings you</string>
    <string name="whatsnew_page1_description">New languages.</string>
    <string name="whatsnew_page2_description">New layout.</string>
    <string name="whatsnew_page3_description">The dark mode support.</string>
    <string-array name="change_device_image_actions">
        <item>@string/select_from_adeon_library</item>
        <item>@string/select_image</item>
        <item>@string/take_photo</item>
    </string-array>
</resources>