<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            tools:context=".ui.help.HelpFragment"
    >
        <ImageView
                android:id="@+id/adeon_logo"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/content_desc_application_logo"
                app:srcCompat="@drawable/ic_adeon_logo_vertical" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" app:layout_constraintTop_toTopOf="parent"
        />

        <androidx.appcompat.widget.AppCompatTextView
                android:text="@string/app_name"
                android:textAppearance="?textAppearanceHeadline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/app_title" app:layout_constraintStart_toEndOf="@+id/adeon_logo"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="16dp" android:layout_marginTop="32dp"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:text="@string/app_version"
                android:textAppearance="?textAppearanceListItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/version" app:layout_constraintStart_toEndOf="@+id/adeon_logo"
                app:layout_constraintTop_toBottomOf="@+id/app_title"
                android:layout_marginStart="16dp" android:layout_marginTop="8dp"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:text="@string/app_vendor"
                android:textAppearance="?textAppearanceCaption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/copyright" app:layout_constraintStart_toEndOf="@+id/adeon_logo"
                app:layout_constraintTop_toBottomOf="@+id/version"
                android:layout_marginStart="16dp" android:layout_marginTop="16dp" android:layout_marginBottom="16dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>